Add logout functionality.

--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -8,6 +8,15 @@
     <title>Index</title>
 </head>
 <body>
+<header>
+    <nav>
+        <ul>
+            <li>
+                <a href="/logout">Logout</a>
+            </li>
+        </ul>
+    </nav>
+</header>
     <h1>Index</h1>
 </body>
 </html>
