Add simple navbar, style with SASS

--- a/templates/pages/login.html.twig
+++ b/templates/pages/login.html.twig
@@ -5,21 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Login</title>
 </head>
 <body>
-<form class="login" action="/login" method="post">
-    <div class="form-box">
-        <label for="">Username</label>
-        <input type="text" name="username">
-    </div>
-    <div class="form-box">
-        <label for="">Password</label>
-        <input type="password" name="password">
-    </div>
-    <div class="form-b0x">
-        <button>Login</button>
-    </div>
-</form>
+<main>
+    <form class="login" action="/login" method="post">
+        <div class="form-box">
+            <label for="">Username</label>
+            <input type="text" name="username">
+        </div>
+        <div class="form-box">
+            <label for="">Password</label>
+            <input type="password" name="password">
+        </div>
+        <div class="form-box">
+            <button>Login</button>
+        </div>
+    </form>
+</main>
 </body>
 </html>
