--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
   box-sizing: inherit;
 }
 
+@import "abstracts/mixins";
+@import "base/base";
 @import "layouts/navbar";
 @import "components/form";
 @import "components/login-form";
