Add "remember-me" functionality.

--- a/templates/pages/login.html.twig
+++ b/templates/pages/login.html.twig
@@ -19,6 +19,10 @@
             <label for="">Password</label>
             <input type="password" name="password">
         </div>
+        <div style="margin: auto">
+            <input type="checkbox" name="remember">
+            <label class="always" for="">Remember Me</label>
+        </div>
         <div class="form-box">
             <button>Login</button>
         </div>
