--- a/sass/layouts/_navbar.scss
+++ b/sass/layouts/_navbar.scss
@@ -2,22 +2,28 @@
 nav {
   width: 100%;
 
-  ul {
-    margin: 0;
-    top: 0;
-    width: 100%;
-    padding: 0;
-    overflow: hidden;
-    background-color: lightgray;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
-    list-style: none;
+
+  ul {
+
+    @include horizontal-list;
+    flex-grow: 1;
+
+    background-color: lightgray;
+    font-family: sans-serif;
 
     display: flex;
     align-items: center;
     flex-direction: row;
     justify-content: flex-start;
-    flex-grow: 0;
 
+    &.page-nav {}
+    &.profile-nav  {
+      justify-content: flex-end;
+    }
     li {
       width: 150px;
       height: auto;
@@ -26,10 +32,10 @@ nav {
       text-align: center;
 
       a {
-        text-decoration: none;
+        padding: 2rem;
         display: inline-block;
+        text-decoration: none;
         width: 100%;
-        padding: 1.5rem .5rem;
 
         &:hover {
           background-color: gray;
