--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -1,26 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/main.css">
-    <title>Index</title>
-</head>
-<body>
-<header>
-    <nav>
-        <ul>
-            <li>
-                <a href="/logout">Logout</a>
-            </li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <h1>Index</h1>
-</main>
-<footer></footer>
-</body>
-</html>
+{% extends 'partials/base.html.twig' %}
+
+{% block main %}<h1>Index</h1>{% endblock %}
