Display users on Users page.  Improved some styling.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,8 @@
 
 @import "abstracts/mixins";
 @import "base/base";
+@import "base/typography";
 @import "layouts/navbar";
 @import "components/form";
 @import "components/login-form";
+@import "components/selectable-list";
