--- a/sass/components/_selectable-list.scss
+++ b/sass/components/_selectable-list.scss
@@ -6,6 +6,8 @@ ul.selectable {
       background-color: lightgray;
     }
     a {
+      display: inline-block;
+      width: 100%;
       text-decoration: none;
     }
   }
