--- a/templates/pages/partials/base.html.twig
+++ b/templates/pages/partials/base.html.twig
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/main.css">
     {% block scripts %}
         <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     {% endblock %}
     <title>{{ title }}</title>
 </head>
