--- a/templates/pages/users.html.twig
+++ b/templates/pages/users.html.twig
@@ -7,7 +7,22 @@
 
 {% block main %}<h1>Users</h1>
 
-    <section>
-        <ul id="users-list" class="selectable"></ul>
-    </section>
+    <div class="main main-users">
+        <section>
+            <ul id="users-list" class="selectable"></ul>
+        </section>
+
+        <section>
+            <form action="" id="users-form">
+                <div class="form-box">
+                    <label for="">Name </label>
+                    <input type="text" name="Username">
+                </div>
+                <div class="form-box">
+                    <label for="">Email </label>
+                    <input type="email" name="Email">
+                </div>
+            </form>
+        </section>
+    </div>
 {% endblock %}
