--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "base/base";
 @import "base/typography";
 @import "layouts/navbar";
-@import "layouts/main-section";
 @import "components/form";
 @import "components/login-form";
 @import "components/selectable-list";
+@import "pages/main-users";
