--- a/templates/pages/users.html.twig
+++ b/templates/pages/users.html.twig
@@ -8,11 +8,14 @@
 {% block main %}<h1>Users</h1>
 
     <div class="main main-users">
-        <section>
+        <section class="users-list">
             <ul id="users-list" class="selectable"></ul>
         </section>
 
-        <section>
+        <section class="users-form">
+            <div style="text-align: right">
+                <button id="new-user" disabled>New</button>
+            </div>
             <form action="" id="users-form">
                 <div class="form-box">
                     <label for="">Name </label>
@@ -21,6 +24,17 @@
                 <div class="form-box">
                     <label for="">Email </label>
                     <input type="email" name="Email">
+                </div>
+                <hr>
+
+                {% for perm in allPerms %}
+                    <div>
+                    <input type="checkbox" name="{{ perm.Slug }}" {% if perm.Slug in myPerms %}checked{% endif %}>
+                    <label for="">{{ perm.Description }}</label>
+                    </div>
+                {% endfor %}
+                <div class="form-box">
+                    <button name="saveButton" disabled>Save</button>
                 </div>
             </form>
         </section>
