Added "Loading" spinner.  Corrected permissions for displaying Main Menu Navbar items.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,4 +13,5 @@
 @import "components/form";
 @import "components/login-form";
 @import "components/selectable-list";
+@import "components/loading";
 @import "pages/main-users";
