--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -41,3 +41,14 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+button {
+  padding: 1rem 3rem;
+  color: yellow;
+  background-color: green;
+
+  &:disabled {
+    color: lightgray;
+    background-color: gray;
+  }
+}
