Save new user to database

--- a/templates/pages/users.html.twig
+++ b/templates/pages/users.html.twig
@@ -34,7 +34,8 @@
                     </div>
                 {% endfor %}
                 <div class="form-box">
-                    <button id="save-user-button" name="saveButton" disabled>Save</button>
+                    <button id="save-user-button" type="submit" disabled>Save</button>
+                    <button id="cancel-user-form" type="reset" disabled>Cancel</button>
                 </div>
             </form>
         </section>
