Basic layout of "Groups" page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "base/base";
 @import "base/typography";
 @import "layouts/navbar";
+@import "layouts/list-details";
 @import "components/form";
 @import "components/login-form";
 @import "components/selectable-list";
