--- a/templates/pages/partials/base.html.twig
+++ b/templates/pages/partials/base.html.twig
@@ -21,6 +21,7 @@
             {% if 'PAGE_HOME' in myPerms %}<li><a href="/">Home</a></li>{% endif %}
             {% if 'PAGE_REPORTS' in myPerms %}<li><a href="/reports">Reports</a></li>{% endif %}
             {% if 'PAGE_USERS' in myPerms  %}<li><a href="/users">Users</a></li>{% endif %}
+            {% if 'PAGE_GROUPS' in myPerms %}<li><a href="/groups">Groups</a></li>{% endif %}
             {% if 'PAGE_SECURITY' in myPerms %}<li><a href="/security">Security</a></li>{% endif %}
             {% if 'PAGE_ADMIN' in myPerms %}<li><a href="/admin">Admin</a></li>{% endif %}
         </ul>
