--- a/templates/pages/users.html.twig
+++ b/templates/pages/users.html.twig
@@ -9,6 +9,7 @@
 
     <div class="main main-users">
         <section class="users-list">
+            <h2>Users</h2>
             <ul id="users-list" class="selectable"></ul>
         </section>
 
