Basic user update

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -36,6 +36,11 @@ form {
       &::placeholder {
         font-style: italic;
       }
+
+      &.modified {
+        color: $color-secondary-1-4;
+        background-color: $color-complement-1;
+      }
     }
 
     button {
