--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 }
 
 @import "abstracts/mixins";
+@import "abstracts/variables";
 @import "base/base";
 @import "base/typography";
 @import "layouts/navbar";
